--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,31 +25,31 @@ body {
 }
 /* universal/starting styles end*/
 /* header style start*/
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-.header nav ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header nav ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -114,14 +114,14 @@ body {
 }
 /* benefits style end*/
 /* footer style start*/
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
 /* footer style end*/
